include ../Make.inc

## FORTRAN
fortran_tests = ../../bin/fortran_allreduces.bin \
      ../../bin/fortran_print.bin \
      ../../bin/fortran_seg_ptr.bin \
      ../../bin/fortran_seg_use.bin \
      ../../bin/fortran_use.bin

______bin_fortran_allreduces_bin_SOURCES = fortran_allreduces.f90
______bin_fortran_print_bin_SOURCES = fortran_print.f90
______bin_fortran_seg_ptr_bin_SOURCES = fortran_seg_ptr.f90
______bin_fortran_seg_use_bin_SOURCES = fortran_seg_use.f90
______bin_fortran_use_bin_SOURCES = fortran_use.f90

noinst_PROGRAMS = $(fortran_tests)
