include ../Make.inc

## GROUPS
groups_tests = ../../bin/g_before_start.bin \
      ../../bin/g_coll_del_coll.bin \
      ../../bin/g_commit_g_all.bin \
      ../../bin/g_elems.bin \
      ../../bin/g_force_timeout.bin \
      ../../bin/g_max_groups.bin \
      ../../bin/g_no_own.bin \
      ../../bin/g_num.bin \
      ../../bin/g_size.bin \
      ../../bin/g_some_from_all.bin \
      ../../bin/g_with_one_hole.bin \
      ../../bin/g_with_two_holes.bin

#../../bin/g_commit_try_block.bin

______bin_g_before_start_bin_SOURCES = g_before_start.c $(auxSRCS)
______bin_g_coll_del_coll_bin_SOURCES = g_coll_del_coll.c $(auxSRCS)
______bin_g_commit_g_all_bin_SOURCES = g_commit_g_all.c $(auxSRCS)
______bin_g_elems_bin_SOURCES = g_elems.c $(auxSRCS)
______bin_g_force_timeout_bin_SOURCES = g_force_timeout.c $(auxSRCS)
______bin_g_max_groups_bin_SOURCES = g_max_groups.c $(auxSRCS)
______bin_g_no_own_bin_SOURCES = g_no_own.c $(auxSRCS)
______bin_g_num_bin_SOURCES = g_num.c $(auxSRCS)
______bin_g_size_bin_SOURCES = g_size.c $(auxSRCS)
______bin_g_some_from_all_bin_SOURCES = g_some_from_all.c $(auxSRCS)
______bin_g_with_one_hole_bin_SOURCES = g_with_one_hole.c $(auxSRCS)
______bin_g_with_two_holes_bin_SOURCES = g_with_two_holes.c $(auxSRCS)
#______bin_g_commit_try_block_bin_SOURCES = g_commit_try_block.c $(auxSRCS)

noinst_PROGRAMS = $(groups_tests)
